# RX11

./: Cargo.toml  README.md  presets.csv
src/: envelope.rs  lib.rs  logger.rs  main.rs  noise_generator.rs  oscillator.rs  presets.rs  rotary_slider.rs  state_variable_filter.rs  synth.rs  ui.rs  voice.rs
